--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "mongoose": "^5.12.5",
     "nodemon": "^2.0.7",
+    "socket.io": "^4.0.1",
     "sucrase": "^3.18.1",
     "youch": "^2.2.1"
   }
