--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "author": "",
+  "author": "Rafael Sene",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "yarn sucrase-node src/index.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -16,9 +16,11 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "mongoose": "^5.12.5",
-    "nodemon": "^2.0.7",
     "socket.io": "^4.0.1",
-    "sucrase": "^3.18.1",
     "youch": "^2.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "sucrase": "^3.18.1"
   }
 }
