--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^5.12.5",
     "socket.io": "^4.0.1",
+    "sucrase": "^3.18.1",
     "youch": "^2.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "sucrase": "^3.18.1"
+    "nodemon": "^2.0.7"
   }
 }
