--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": "Rafael Sene",
   "scripts": {
-    "start": "yarn sucrase-node src/index.js",
+    "start": "yarn sucrase-node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
