--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "g-crypt": "^1.1.0",
     "mongoose": "^5.12.5",
     "socket.io": "^4.0.1",
     "sucrase": "^3.18.1",
